baml_language/crates/baml_tests/snapshots/builtin_io/baml_tests__builtin_io__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.ReadAndClose() -> string  [expr] {
  { let f = baml.fs.open("example.txt"); let content = f.read_string(); f.close() } content
}
function user.ReadFile() -> string  [expr] {
  { let f = baml.fs.open("example.txt") } f.read_string()
}
function user.ReadFileBytes() -> uint8array  [expr] {
  { let f = baml.fs.open("binary.dat") } f.read_bytes()
}
function user.ReadFileBytesAndClose() -> uint8array  [expr] {
  { let f = baml.fs.open("binary.dat"); let data = f.read_bytes(); f.close() } data
}
function user.ReadFileBytesInline() -> uint8array  [expr] {
  {  } baml.fs.open("image.png").read_bytes()
}
function user.ReadFileInline() -> string  [expr] {
  {  } baml.fs.open("data.json").read_string()
}
function user.ReadMultipleFiles() -> string  [expr] {
  { let f1 = baml.fs.open("file1.txt"); let f2 = baml.fs.open("file2.txt"); let content1 = f1.read_string(); let content2 = f2.read_string() } content1 Add content2
}
function user.ConnectAndRead() -> string  [expr] {
  { let sock = baml.net.connect("127.0.0.1:8080") } sock.read()
}
function user.ConnectAndReadInline() -> string  [expr] {
  {  } baml.net.connect("localhost:3000").read()
}
function user.ConnectReadAndClose() -> string  [expr] {
  { let sock = baml.net.connect("127.0.0.1:8080"); let data = sock.read(); sock.close() } data
}
function user.MultipleConnections() -> string  [expr] {
  { let s1 = baml.net.connect("server1:80"); let s2 = baml.net.connect("server2:80"); let data1 = s1.read(); let data2 = s2.read() } data1 Add data2
}
function user.ChainCommands() -> string  [expr] {
  { let result1 = baml.sys.shell("pwd"); let result2 = baml.sys.shell("whoami") } result1 Add " - " Add result2
}
function user.RunCommand() -> string  [expr] {
  {  } baml.sys.shell("echo hello")
}
function user.RunCommandWithVar() -> string  [expr] {
  { let cmd = "ls -la" } baml.sys.shell(cmd)
}
