baml_language/crates/baml_tests/snapshots/builtin_io/baml_tests__builtin_io__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.ReadAndClose() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.fs.File // f
    let _2: future<baml.fs.File>
    let _3: string // content
    let _4: future<string>
    let _5: null
    let _6: future<null>

    bb0: {
        _2 = dispatch_future const fn baml.fs.open(const "example.txt") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _4 = dispatch_future const fn baml.fs.File.read_string(copy _1) -> bb3;
    }

    bb3: {
        _3 = await _4 -> [bb4];
    }

    bb4: {
        _6 = dispatch_future const fn baml.fs.File.close(copy _1) -> bb5;
    }

    bb5: {
        _5 = await _6 -> [bb6];
    }

    bb6: {
        _0 = copy _3;
        goto -> bb7;
    }

    bb7: {
        return;
    }
}

fn user.ReadFile() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.fs.File // f
    let _2: future<baml.fs.File>
    let _3: future<string>

    bb0: {
        _2 = dispatch_future const fn baml.fs.open(const "example.txt") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _3 = dispatch_future const fn baml.fs.File.read_string(copy _1) -> bb3;
    }

    bb3: {
        _0 = await _3 -> [bb4];
    }

    bb4: {
        return;
    }
}

fn user.ReadFileBytes() -> uint8array {
    // Locals:
    let _0: uint8array // _0 // return
    let _1: baml.fs.File // f
    let _2: future<baml.fs.File>
    let _3: future<uint8array>

    bb0: {
        _2 = dispatch_future const fn baml.fs.open(const "binary.dat") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _3 = dispatch_future const fn baml.fs.File.read_bytes(copy _1) -> bb3;
    }

    bb3: {
        _0 = await _3 -> [bb4];
    }

    bb4: {
        return;
    }
}

fn user.ReadFileBytesAndClose() -> uint8array {
    // Locals:
    let _0: uint8array // _0 // return
    let _1: baml.fs.File // f
    let _2: future<baml.fs.File>
    let _3: uint8array // data
    let _4: future<uint8array>
    let _5: null
    let _6: future<null>

    bb0: {
        _2 = dispatch_future const fn baml.fs.open(const "binary.dat") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _4 = dispatch_future const fn baml.fs.File.read_bytes(copy _1) -> bb3;
    }

    bb3: {
        _3 = await _4 -> [bb4];
    }

    bb4: {
        _6 = dispatch_future const fn baml.fs.File.close(copy _1) -> bb5;
    }

    bb5: {
        _5 = await _6 -> [bb6];
    }

    bb6: {
        _0 = copy _3;
        goto -> bb7;
    }

    bb7: {
        return;
    }
}

fn user.ReadFileBytesInline() -> uint8array {
    // Locals:
    let _0: uint8array // _0 // return
    let _1: baml.fs.File
    let _2: future<baml.fs.File>
    let _3: future<uint8array>

    bb0: {
        _2 = dispatch_future const fn baml.fs.open(const "image.png") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _3 = dispatch_future const fn baml.fs.File.read_bytes(copy _1) -> bb3;
    }

    bb3: {
        _0 = await _3 -> [bb4];
    }

    bb4: {
        return;
    }
}

fn user.ReadFileInline() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.fs.File
    let _2: future<baml.fs.File>
    let _3: future<string>

    bb0: {
        _2 = dispatch_future const fn baml.fs.open(const "data.json") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _3 = dispatch_future const fn baml.fs.File.read_string(copy _1) -> bb3;
    }

    bb3: {
        _0 = await _3 -> [bb4];
    }

    bb4: {
        return;
    }
}

fn user.ReadMultipleFiles() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.fs.File // f1
    let _2: future<baml.fs.File>
    let _3: baml.fs.File // f2
    let _4: future<baml.fs.File>
    let _5: string // content1
    let _6: future<string>
    let _7: string // content2
    let _8: future<string>
    let _9: string
    let _10: string

    bb0: {
        _2 = dispatch_future const fn baml.fs.open(const "file1.txt") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _4 = dispatch_future const fn baml.fs.open(const "file2.txt") -> bb3;
    }

    bb3: {
        _3 = await _4 -> [bb4];
    }

    bb4: {
        _6 = dispatch_future const fn baml.fs.File.read_string(copy _1) -> bb5;
    }

    bb5: {
        _5 = await _6 -> [bb6];
    }

    bb6: {
        _8 = dispatch_future const fn baml.fs.File.read_string(copy _3) -> bb7;
    }

    bb7: {
        _7 = await _8 -> [bb8];
    }

    bb8: {
        _9 = copy _5;
        _10 = copy _7;
        _0 = copy _9 + copy _10;
        goto -> bb9;
    }

    bb9: {
        return;
    }
}

fn user.ConnectAndRead() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.net.Socket // sock
    let _2: future<baml.net.Socket>
    let _3: future<string>

    bb0: {
        _2 = dispatch_future const fn baml.net.connect(const "127.0.0.1:8080") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _3 = dispatch_future const fn baml.net.Socket.read(copy _1) -> bb3;
    }

    bb3: {
        _0 = await _3 -> [bb4];
    }

    bb4: {
        return;
    }
}

fn user.ConnectAndReadInline() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.net.Socket
    let _2: future<baml.net.Socket>
    let _3: future<string>

    bb0: {
        _2 = dispatch_future const fn baml.net.connect(const "localhost:3000") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _3 = dispatch_future const fn baml.net.Socket.read(copy _1) -> bb3;
    }

    bb3: {
        _0 = await _3 -> [bb4];
    }

    bb4: {
        return;
    }
}

fn user.ConnectReadAndClose() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.net.Socket // sock
    let _2: future<baml.net.Socket>
    let _3: string // data
    let _4: future<string>
    let _5: null
    let _6: future<null>

    bb0: {
        _2 = dispatch_future const fn baml.net.connect(const "127.0.0.1:8080") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _4 = dispatch_future const fn baml.net.Socket.read(copy _1) -> bb3;
    }

    bb3: {
        _3 = await _4 -> [bb4];
    }

    bb4: {
        _6 = dispatch_future const fn baml.net.Socket.close(copy _1) -> bb5;
    }

    bb5: {
        _5 = await _6 -> [bb6];
    }

    bb6: {
        _0 = copy _3;
        goto -> bb7;
    }

    bb7: {
        return;
    }
}

fn user.MultipleConnections() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.net.Socket // s1
    let _2: future<baml.net.Socket>
    let _3: baml.net.Socket // s2
    let _4: future<baml.net.Socket>
    let _5: string // data1
    let _6: future<string>
    let _7: string // data2
    let _8: future<string>
    let _9: string
    let _10: string

    bb0: {
        _2 = dispatch_future const fn baml.net.connect(const "server1:80") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _4 = dispatch_future const fn baml.net.connect(const "server2:80") -> bb3;
    }

    bb3: {
        _3 = await _4 -> [bb4];
    }

    bb4: {
        _6 = dispatch_future const fn baml.net.Socket.read(copy _1) -> bb5;
    }

    bb5: {
        _5 = await _6 -> [bb6];
    }

    bb6: {
        _8 = dispatch_future const fn baml.net.Socket.read(copy _3) -> bb7;
    }

    bb7: {
        _7 = await _8 -> [bb8];
    }

    bb8: {
        _9 = copy _5;
        _10 = copy _7;
        _0 = copy _9 + copy _10;
        goto -> bb9;
    }

    bb9: {
        return;
    }
}

fn user.ChainCommands() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // result1
    let _2: future<string>
    let _3: string // result2
    let _4: future<string>
    let _5: string
    let _6: string
    let _7: string

    bb0: {
        _2 = dispatch_future const fn baml.sys.shell(const "pwd") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _4 = dispatch_future const fn baml.sys.shell(const "whoami") -> bb3;
    }

    bb3: {
        _3 = await _4 -> [bb4];
    }

    bb4: {
        _6 = copy _1;
        _5 = copy _6 + const " - ";
        _7 = copy _3;
        _0 = copy _5 + copy _7;
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn user.RunCommand() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: future<string>

    bb0: {
        _1 = dispatch_future const fn baml.sys.shell(const "echo hello") -> bb1;
    }

    bb1: {
        _0 = await _1 -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.RunCommandWithVar() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // cmd
    let _2: string
    let _3: future<string>

    bb0: {
        _1 = const "ls -la";
        _2 = copy _1;
        _3 = dispatch_future const fn baml.sys.shell(copy _2) -> bb1;
    }

    bb1: {
        _0 = await _3 -> [bb2];
    }

    bb2: {
        return;
    }
}
