baml_language/crates/baml_tests/snapshots/builtin_io/baml_tests__builtin_io__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 1829
---
=== MIR2 ===
fn user.ReadAndClose() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.File // f
    let _2: future<baml.File>
    let _3: string // content
    let _4: baml.File
    let _5: future<string>
    let _6: null
    let _7: baml.File
    let _8: future<null>

    bb0: {
        _2 = dispatch_future const fn baml.fs.open(const "example.txt") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _4 = copy _1;
        _5 = dispatch_future const fn baml.fs.File.read(copy _4) -> bb3;
    }

    bb3: {
        _3 = await _5 -> [bb4];
    }

    bb4: {
        _7 = copy _1;
        _8 = dispatch_future const fn baml.fs.File.close(copy _7) -> bb5;
    }

    bb5: {
        _6 = await _8 -> [bb6];
    }

    bb6: {
        _0 = copy _3;
        goto -> bb7;
    }

    bb7: {
        return;
    }
}

fn user.ReadFile() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.File // f
    let _2: future<baml.File>
    let _3: baml.File
    let _4: future<string>

    bb0: {
        _2 = dispatch_future const fn baml.fs.open(const "example.txt") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _3 = copy _1;
        _4 = dispatch_future const fn baml.fs.File.read(copy _3) -> bb3;
    }

    bb3: {
        _0 = await _4 -> [bb4];
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn user.ReadFileInline() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.File
    let _2: future<baml.File>
    let _3: future<string>

    bb0: {
        _2 = dispatch_future const fn baml.fs.open(const "data.json") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _3 = dispatch_future const fn baml.fs.File.read(copy _1) -> bb3;
    }

    bb3: {
        _0 = await _3 -> [bb4];
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn user.ReadMultipleFiles() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.File // f1
    let _2: future<baml.File>
    let _3: baml.File // f2
    let _4: future<baml.File>
    let _5: string // content1
    let _6: baml.File
    let _7: future<string>
    let _8: string // content2
    let _9: baml.File
    let _10: future<string>
    let _11: string
    let _12: string

    bb0: {
        _2 = dispatch_future const fn baml.fs.open(const "file1.txt") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _4 = dispatch_future const fn baml.fs.open(const "file2.txt") -> bb3;
    }

    bb3: {
        _3 = await _4 -> [bb4];
    }

    bb4: {
        _6 = copy _1;
        _7 = dispatch_future const fn baml.fs.File.read(copy _6) -> bb5;
    }

    bb5: {
        _5 = await _7 -> [bb6];
    }

    bb6: {
        _9 = copy _3;
        _10 = dispatch_future const fn baml.fs.File.read(copy _9) -> bb7;
    }

    bb7: {
        _8 = await _10 -> [bb8];
    }

    bb8: {
        _11 = copy _5;
        _12 = copy _8;
        _0 = copy _11 + copy _12;
        goto -> bb9;
    }

    bb9: {
        return;
    }
}

fn user.ConnectAndRead() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.Socket // sock
    let _2: future<baml.Socket>
    let _3: baml.Socket
    let _4: future<string>

    bb0: {
        _2 = dispatch_future const fn baml.net.connect(const "127.0.0.1:8080") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _3 = copy _1;
        _4 = dispatch_future const fn baml.net.Socket.read(copy _3) -> bb3;
    }

    bb3: {
        _0 = await _4 -> [bb4];
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn user.ConnectAndReadInline() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.Socket
    let _2: future<baml.Socket>
    let _3: future<string>

    bb0: {
        _2 = dispatch_future const fn baml.net.connect(const "localhost:3000") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _3 = dispatch_future const fn baml.net.Socket.read(copy _1) -> bb3;
    }

    bb3: {
        _0 = await _3 -> [bb4];
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn user.MultipleConnections() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.Socket // s1
    let _2: future<baml.Socket>
    let _3: baml.Socket // s2
    let _4: future<baml.Socket>
    let _5: string // data1
    let _6: baml.Socket
    let _7: future<string>
    let _8: string // data2
    let _9: baml.Socket
    let _10: future<string>
    let _11: string
    let _12: string

    bb0: {
        _2 = dispatch_future const fn baml.net.connect(const "server1:80") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _4 = dispatch_future const fn baml.net.connect(const "server2:80") -> bb3;
    }

    bb3: {
        _3 = await _4 -> [bb4];
    }

    bb4: {
        _6 = copy _1;
        _7 = dispatch_future const fn baml.net.Socket.read(copy _6) -> bb5;
    }

    bb5: {
        _5 = await _7 -> [bb6];
    }

    bb6: {
        _9 = copy _3;
        _10 = dispatch_future const fn baml.net.Socket.read(copy _9) -> bb7;
    }

    bb7: {
        _8 = await _10 -> [bb8];
    }

    bb8: {
        _11 = copy _5;
        _12 = copy _8;
        _0 = copy _11 + copy _12;
        goto -> bb9;
    }

    bb9: {
        return;
    }
}

fn user.ConnectReadAndClose() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.Socket // sock
    let _2: future<baml.Socket>
    let _3: string // data
    let _4: baml.Socket
    let _5: future<string>
    let _6: null
    let _7: baml.Socket
    let _8: future<null>

    bb0: {
        _2 = dispatch_future const fn baml.net.connect(const "127.0.0.1:8080") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _4 = copy _1;
        _5 = dispatch_future const fn baml.net.Socket.read(copy _4) -> bb3;
    }

    bb3: {
        _3 = await _5 -> [bb4];
    }

    bb4: {
        _7 = copy _1;
        _8 = dispatch_future const fn baml.net.Socket.close(copy _7) -> bb5;
    }

    bb5: {
        _6 = await _8 -> [bb6];
    }

    bb6: {
        _0 = copy _3;
        goto -> bb7;
    }

    bb7: {
        return;
    }
}

fn user.ChainCommands() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // result1
    let _2: future<string>
    let _3: string // result2
    let _4: future<string>
    let _5: string
    let _6: string
    let _7: string

    bb0: {
        _2 = dispatch_future const fn baml.sys.shell(const "pwd") -> bb1;
    }

    bb1: {
        _1 = await _2 -> [bb2];
    }

    bb2: {
        _4 = dispatch_future const fn baml.sys.shell(const "whoami") -> bb3;
    }

    bb3: {
        _3 = await _4 -> [bb4];
    }

    bb4: {
        _6 = copy _1;
        _5 = copy _6 + const " - ";
        _7 = copy _3;
        _0 = copy _5 + copy _7;
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn user.RunCommandWithVar() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // cmd
    let _2: string
    let _3: future<string>

    bb0: {
        _1 = const "ls -la";
        _2 = copy _1;
        _3 = dispatch_future const fn baml.sys.shell(copy _2) -> bb1;
    }

    bb1: {
        _0 = await _3 -> [bb2];
    }

    bb2: {
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

fn user.RunCommand() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: future<string>

    bb0: {
        _1 = dispatch_future const fn baml.sys.shell(const "echo hello") -> bb1;
    }

    bb1: {
        _0 = await _1 -> [bb2];
    }

    bb2: {
        goto -> bb3;
    }

    bb3: {
        return;
    }
}
