baml_language/crates/baml_tests/snapshots/builtin_io/baml_tests__builtin_io__04_tir.snap
---
source: target/debug/build/baml_tests-267996652c5f418c/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function ReadMultipleFiles:
    Return: String
  Function ReadFile:
    Return: String
  Function ReadFileInline:
    Return: String
  Function MultipleConnections:
    Return: String
  Function ConnectAndReadInline:
    Return: String
  Function ConnectAndRead:
    Return: String
  Function ChainCommands:
    Return: String
  Function RunCommandWithVar:
    Return: String
  Function RunCommand:
    Return: String
