baml_language/crates/baml_tests/snapshots/builtin_io/baml_tests__builtin_io__05_diagnostics.snap
---
source: target/debug/build/baml_tests-267996652c5f418c/out/generated_tests.rs
expression: output
---
=== DIAGNOSTICS ===
No errors found.
